tests/ui/impl-trait/normalize-tait-in-const.stderr
error: expected a trait, found type
  --> $DIR/normalize-tait-in-const.rs:27:34
   |
LL | const fn with_positive<F: ~const for<'a> Fn(&'a Alias<'a>) + ~const Destruct>(fun: F) {
   |                                  ^^^^^^^^^^^^^^^^^^^^^^^^^

error: aborting due to 1 previous error

